fix viewport height on mobiles

--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,8 @@
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     -webkit-text-size-adjust: 100%;
+
+    height: 100%;
 }
 
 a {
@@ -18,8 +20,7 @@ a {
 body {
     margin: 0;
     min-width: 320px;
-    min-height: 100vh;
-    max-height: 100vh;
+    height: inherit;
     padding: 1rem;
     box-sizing: border-box;
     display: flex;
